--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.6.5",
+	"version": "1.6.6",
 	"license": "MPL-2.0",
 	"name": "@clevercanyon/shescape.fork",
 	"description": "Bash-like brace expansion, implemented in JS.",
@@ -11,7 +11,9 @@
 	"homepage": "https://github.com/clevercanyon/shescape.fork#readme",
 	"bugs": "https://github.com/clevercanyon/shescape.fork/issues",
 	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": ["clevercanyon"],
+	"keywords": [
+		"clevercanyon"
+	],
 	"author": {
 		"name": "Eric Cornelissen",
 		"url": "https://ericcornelissen.dev"
@@ -23,7 +25,12 @@
 		}
 	],
 	"type": "module",
-	"files": ["/src", "/index.js", "/index.cjs", "/index.d.ts"],
+	"files": [
+		"/src",
+		"/index.js",
+		"/index.cjs",
+		"/index.d.ts"
+	],
 	"bin": {},
 	"imports": {},
 	"exports": {
@@ -52,8 +59,14 @@
 	},
 	"overrides": {},
 	"workspaces": [],
-	"cpu": ["x64", "arm64"],
-	"os": ["darwin", "linux"],
+	"cpu": [
+		"x64",
+		"arm64"
+	],
+	"os": [
+		"darwin",
+		"linux"
+	],
 	"engines": {
 		"node": "^19.2.0 || ^19.4.0",
 		"npm": "^8.19.3 || ^9.2.0"
