--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.6.6",
+	"version": "1.6.7",
 	"license": "MPL-2.0",
 	"name": "@clevercanyon/shescape.fork",
 	"description": "Bash-like brace expansion, implemented in JS.",
@@ -11,9 +11,7 @@
 	"homepage": "https://github.com/clevercanyon/shescape.fork#readme",
 	"bugs": "https://github.com/clevercanyon/shescape.fork/issues",
 	"funding": "https://github.com/sponsors/clevercanyon",
-	"keywords": [
-		"clevercanyon"
-	],
+	"keywords": ["clevercanyon"],
 	"author": {
 		"name": "Eric Cornelissen",
 		"url": "https://ericcornelissen.dev"
@@ -25,12 +23,7 @@
 		}
 	],
 	"type": "module",
-	"files": [
-		"/src",
-		"/index.js",
-		"/index.cjs",
-		"/index.d.ts"
-	],
+	"files": ["/src", "/index.js", "/index.cjs", "/index.d.ts"],
 	"bin": {},
 	"imports": {},
 	"exports": {
@@ -48,25 +41,19 @@
 	"types": "./index.d.ts",
 	"typesVersions": {},
 	"dependencies": {
-		"which": "^2.0.0"
+		"which": "^2.0.2"
 	},
 	"peerDependencies": {},
 	"peerDependenciesMeta": {},
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.91"
+		"@clevercanyon/skeleton-dev-deps": "^1.0.99"
 	},
 	"overrides": {},
 	"workspaces": [],
-	"cpu": [
-		"x64",
-		"arm64"
-	],
-	"os": [
-		"darwin",
-		"linux"
-	],
+	"cpu": ["x64", "arm64"],
+	"os": ["darwin", "linux"],
 	"engines": {
 		"node": "^19.2.0 || ^19.4.0",
 		"npm": "^8.19.3 || ^9.2.0"
@@ -87,11 +74,11 @@
 						"architects": "push"
 					},
 					"labels": {},
-					"configVersion": "",
+					"configVersion": "1.0.1",
 					"envsVersion": ""
 				},
 				"npmjs": {
-					"configVersions": ""
+					"configVersions": "1.0.1,1.0.0"
 				}
 			}
 		}
