--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"version": "1.6.31",
+	"version": "1.6.32",
 	"license": "MPL-2.0",
 	"name": "@clevercanyon/shescape.fork",
 	"description": "Bash-like brace expansion, implemented in JS.",
@@ -48,7 +48,7 @@
 	"optionalDependencies": {},
 	"bundleDependencies": [],
 	"devDependencies": {
-		"@clevercanyon/skeleton-dev-deps": "^1.0.144"
+		"@clevercanyon/skeleton-dev-deps": "^1.0.156"
 	},
 	"overrides": {},
 	"cpu": ["x64", "arm64"],
@@ -65,7 +65,13 @@
 				},
 				"build": {
 					"appType": "",
-					"targetEnv": ""
+					"targetEnv": "",
+					"entryFiles": []
+				},
+				"ssrBuild": {
+					"appType": "",
+					"targetEnv": "",
+					"entryFiles": []
 				},
 				"github": {
 					"teams": {
